--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,10 @@
             <%= link_to 'Entrar', new_user_session_path %>
           </div>
         <% end %>
+
+        <% if user_signed_in? && current_user.admin? %>
+          <%= link_to "Novo item", new_auction_item_path %>
+        <% end %>
       </nav>
 
       <div>
