--- a/app/views/lots/show.html.erb
+++ b/app/views/lots/show.html.erb
@@ -26,6 +26,12 @@
     <div>
       <p><%= Lot.human_attribute_name :min_bid %></p>
       <p><%= number_to_currency @lot.min_bid %></p>
-    </div>    
+    </div>
   </div>
+
+  <%= render 'status_track' %>
+
+  <%= render 'lot_repository' %>
+
+  <%= render 'add_item_form' %>
 </section>
