Usuário faz oferta

--- a/app/views/lots/show.html.erb
+++ b/app/views/lots/show.html.erb
@@ -40,6 +40,8 @@
     <%= render 'status_track' %>
   </div>
 
+  <%= render 'bid_panel' %>
+
   <%= render 'lot_repository' %>
 
   <%= render 'add_item_form' %>
