--- a/app/views/lots/show.html.erb
+++ b/app/views/lots/show.html.erb
@@ -37,7 +37,7 @@
       </div>
     </div>
 
-    <%= render 'status_track' %>
+    <%= render 'status_map' %>
   </div>
 
   <%= render 'bid_panel' %>
