--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,17 +27,21 @@
           <%= link_to "Novo item", new_auction_item_path %>
         <% end %>
 
-        <% if current_user&.admin? %>
+        <% if user_signed_in? && current_user.admin? %>
           <%= link_to "Novo lote", new_lot_path %>
         <% end %>
 
-        <% if current_user&.admin? %>
+        <% if user_signed_in? && current_user.admin? %>
           <%= link_to "Lotes expirados", expired_lots_path %>
+        <% end %>
+
+        <% if user_signed_in? && current_user.common? %>
+          <%= link_to "Meus lotes", conquered_lots_path %>
         <% end %>
       </nav>
 
       <div>
-        <% if current_user&.admin? %>
+        <% if user_signed_in? && current_user.admin? %>
           <p>(adm)</p>
         <% end %>
       </div>
