--- a/app/views/lots/_lot.html.erb
+++ b/app/views/lots/_lot.html.erb
@@ -2,5 +2,5 @@
 <div>
   <%= link_to lot.code, lot %>
 
-  <p>Lance minímo: <%= lot.min_bid %></p>
+  <p>Oferta miníma: <%= number_to_currency(lot.min_offer) %></p>
 </div>
