--- a/app/views/auction_items/show.html.erb
+++ b/app/views/auction_items/show.html.erb
@@ -1,24 +1,34 @@
 
-<section>
-  <div>
-    <div>
-      <h3><%= @item.name %></h3>
+<section class='mb-3'>
+  <div class='card mx-auto p-1 auction-item-width'>
+    <div class='row g-0'>
+      <div class='col-md-4'>
+        <div class='ratio ratio-1x1 w-100 h-100'>
+          <%= image_tag @item.photo, class: 'card-img-top rounded fit-img border'%>
+        </div>
+      </div>
+
+      <div class='col-md-8'>
+        <div class='d-flex flex-column h-100'>
+          <div class='card-body'>
+            <h3 class='card-title'><%= @item.name %></h3>
+
+            <p class='card-text'><%= @item.description %></p>
+          </div>
+
+          <div>
+            <div class='card-header text-secondary'>
+              Propriedades físicas do item
+            </div>
+
+            <ul class='list-group list-group-flush'>
+              <li class='list-group-item'><%= formated_dimension @item %></li>
+              <li class='list-group-item'>Peso (g): <%= @item.weight %></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div>
-      <%= format_dimension(@item) %>
-    </div>
-
-    <div>
-      <p>Peso (g): <%= @item.weight %></p>
-    </div>
-
-    <div>
-      <p>Descrição: <%= @item.description %></p>
-    </div>
-
-    <div>
-      <%= image_tag @item.photo %>
-    </div>
   </div>
 </section>
